--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>tech.solutionarchitects.advertisment_sdk</groupId>
   <artifactId>beta</artifactId>
-  <version>0.0.24</version>
+  <version>0.0.25</version>
   <packaging>aar</packaging>
-<build>
+  <build>
        <plugins>
            <plugin>
                <groupId>com.simpligility.maven.plugins</groupId>
@@ -75,6 +75,26 @@
       <groupId>org.jetbrains.kotlinx</groupId>
       <artifactId>kotlinx-coroutines-android</artifactId>
       <version>1.6.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.coil-kt</groupId>
+      <artifactId>coil</artifactId>
+      <version>2.2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>io.coil-kt</groupId>
+      <artifactId>coil-gif</artifactId>
+      <version>2.2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>au.com.gridstone.debugdrawer</groupId>
+      <artifactId>debugdrawer</artifactId>
+      <version>0.9.8</version>
+    </dependency>
+    <dependency>
+      <groupId>au.com.gridstone.debugdrawer</groupId>
+      <artifactId>debugdrawer-timber</artifactId>
+      <version>0.9.8</version>
     </dependency>
   </dependencies>
 </project>
