--- a/advertising-demo-app/app/build.gradle
+++ b/advertising-demo-app/app/build.gradle
@@ -12,7 +12,7 @@ android {
         applicationId "tech.solution.testapplication"
         minSdk 21
         targetSdk 33
-        versionCode 1
+        versionCode 1 // eg: 0.99 = 99, 1.0 = 100, 1.54 = 154, 23.08 = 2308
         versionName "0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -22,6 +22,14 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    flavorDimensions "clients"
+    productFlavors {
+        standard {
+            getIsDefault().set(true)
+            dimension "clients"
         }
     }
     compileOptions {
@@ -38,18 +46,18 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.2'
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
-    implementation 'com.github.solutionarchitectstech:mobile_sdk_release:0.1.6'
+    implementation 'com.github.solutionarchitectstech:mobile_sdk_release:0.2.0'
 
     implementation 'androidx.preference:preference-ktx:1.2.0'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
