--- a/pom.xml
+++ b/pom.xml
@@ -2,25 +2,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>tech.solutionarchitects.advertisment_sdk</groupId>
-  <artifactId>beta</artifactId>
-  <version>0.1.6</version>
+  <artifactId>standard</artifactId>
+  <version>0.2.0</version>
   <packaging>aar</packaging>
   <build>
     <plugins>
       <plugin>
         <groupId>com.simpligility.maven.plugins</groupId>
         <artifactId>android-maven-plugin</artifactId>
-        <version>4.3.0</version> <!-- use latest release -->
+        <version>4.6.0</version> <!-- use latest release -->
         <extensions>true</extensions>
       </plugin>
     </plugins>
   </build>
   <dependencies>
-    <dependency>
-      <groupId>com.github.solutionarchitectstech</groupId>
-      <artifactId>android_tracker_sdk_release</artifactId>
-      <version>0.0.20</version>
-    </dependency>
     <dependency>
       <groupId>androidx.appcompat</groupId>
       <artifactId>appcompat</artifactId>
@@ -87,9 +82,9 @@
       <version>2.2.0</version>
     </dependency>
     <dependency>
-      <groupId>com.google.android.exoplayer</groupId>
-      <artifactId>exoplayer-core</artifactId>
-      <version>2.18.1</version>
+      <groupId>org.jetbrains.kotlin</groupId>
+      <artifactId>kotlin-stdlib-jdk8</artifactId>
+      <version>1.6.10</version>
     </dependency>
   </dependencies>
 </project>
