--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>tech.solutionarchitects.advertisment_sdk</groupId>
   <artifactId>standard</artifactId>
-  <version>0.2.0</version>
+  <version>0.2.1</version>
   <packaging>aar</packaging>
   <build>
     <plugins>
@@ -80,6 +80,11 @@
       <groupId>io.coil-kt</groupId>
       <artifactId>coil-gif</artifactId>
       <version>2.2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.android.exoplayer</groupId>
+      <artifactId>exoplayer-core</artifactId>
+      <version>2.18.1</version>
     </dependency>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
