--- a/advertising-demo-app/app/src/main/AndroidManifest.xml
+++ b/advertising-demo-app/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright © Gusev Andrew, Emelianov Andrew, Spinov Dmitry [collectively referred as the Authors], 2017 - All Rights Reserved
   ~ [NOTICE: All information contained herein is, and remains the property of the Authors.](notice: All information contained herein is, and remains the property of the Authors.)
   ~ The intellectual and technical concepts contained herein are proprietary to the Authors
@@ -63,6 +62,10 @@
 
         <activity
             android:name=".activity.ScrollableActivityWithBanners"
+            android:exported="true" />
+
+        <activity
+            android:name=".activity.ProductCreativeActivity"
             android:exported="true" />
     </application>
 
