--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>tech.solutionarchitects.advertisment_sdk</groupId>
   <artifactId>standard</artifactId>
-  <version>0.6.1</version>
+  <version>0.6.2</version>
   <packaging>aar</packaging>
   <build>
     <plugins>
@@ -82,9 +82,34 @@
       <version>2.2.0</version>
     </dependency>
     <dependency>
-      <groupId>com.google.android.exoplayer</groupId>
-      <artifactId>exoplayer-core</artifactId>
-      <version>2.18.1</version>
+      <groupId>androidx.media3</groupId>
+      <artifactId>media3-exoplayer</artifactId>
+      <version>1.0.2</version>
+    </dependency>
+    <dependency>
+      <groupId>androidx.media3</groupId>
+      <artifactId>media3-exoplayer-dash</artifactId>
+      <version>1.0.2</version>
+    </dependency>
+    <dependency>
+      <groupId>androidx.media3</groupId>
+      <artifactId>media3-ui</artifactId>
+      <version>1.0.2</version>
+    </dependency>
+    <dependency>
+      <groupId>ch.acra</groupId>
+      <artifactId>acra-http</artifactId>
+      <version>5.9.7</version>
+    </dependency>
+    <dependency>
+      <groupId>ch.acra</groupId>
+      <artifactId>acra-limiter</artifactId>
+      <version>5.9.7</version>
+    </dependency>
+    <dependency>
+      <groupId>androidx.databinding</groupId>
+      <artifactId>viewbinding</artifactId>
+      <version>7.2.2</version>
     </dependency>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
