--- a/advertising-demo-app/app/build.gradle
+++ b/advertising-demo-app/app/build.gradle
@@ -23,14 +23,14 @@ plugins {
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "tech.solution.testapplication"
         minSdk 21
-        targetSdk 33
-        versionCode 1 // eg: 0.99 = 99, 1.0 = 100, 1.54 = 154, 23.08 = 2308
-        versionName "0.2"
+        targetSdk 34
+        versionCode 7 // eg: 0.99 = 99, 1.0 = 100, 1.54 = 154, 23.08 = 2308
+        versionName "0.7"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -52,18 +52,19 @@ android {
     buildFeatures {
         viewBinding true
     }
+    namespace 'tech.solutionarchitects.testapplication'
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
-    implementation 'com.github.solutionarchitectstech:mobile_sdk_release:0.8.2'
-    implementation 'androidx.preference:preference-ktx:1.2.0'
+    implementation 'com.github.solutionarchitectstech:mobile_sdk_release:0.8.3'
+    implementation 'androidx.preference:preference-ktx:1.2.1'
 
 }
