--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>tech.solutionarchitects.advertisment_sdk</groupId>
   <artifactId>standard</artifactId>
-  <version>0.8.2</version>
+  <version>0.8.3</version>
   <packaging>aar</packaging>
   <build>
     <plugins>
@@ -19,22 +19,22 @@
     <dependency>
       <groupId>androidx.appcompat</groupId>
       <artifactId>appcompat</artifactId>
-      <version>1.4.2</version>
+      <version>1.6.1</version>
     </dependency>
     <dependency>
       <groupId>androidx.core</groupId>
       <artifactId>core-ktx</artifactId>
-      <version>1.8.0</version>
+      <version>1.12.0</version>
     </dependency>
     <dependency>
       <groupId>androidx.fragment</groupId>
       <artifactId>fragment-ktx</artifactId>
-      <version>1.5.0</version>
+      <version>1.6.2</version>
     </dependency>
     <dependency>
       <groupId>androidx.lifecycle</groupId>
       <artifactId>lifecycle-viewmodel-ktx</artifactId>
-      <version>2.5.0</version>
+      <version>2.7.0</version>
     </dependency>
     <dependency>
       <groupId>com.google.android.gms</groupId>
@@ -44,12 +44,12 @@
     <dependency>
       <groupId>com.google.android.gms</groupId>
       <artifactId>play-services-location</artifactId>
-      <version>20.0.0</version>
+      <version>21.2.0</version>
     </dependency>
     <dependency>
       <groupId>com.google.android.material</groupId>
       <artifactId>material</artifactId>
-      <version>1.6.1</version>
+      <version>1.11.0</version>
     </dependency>
     <dependency>
       <groupId>com.squareup.okhttp3</groupId>
@@ -69,32 +69,32 @@
     <dependency>
       <groupId>org.jetbrains.kotlinx</groupId>
       <artifactId>kotlinx-coroutines-android</artifactId>
-      <version>1.6.2</version>
+      <version>1.7.3</version>
     </dependency>
     <dependency>
       <groupId>io.coil-kt</groupId>
       <artifactId>coil</artifactId>
-      <version>2.2.0</version>
+      <version>2.6.0</version>
     </dependency>
     <dependency>
       <groupId>io.coil-kt</groupId>
       <artifactId>coil-gif</artifactId>
-      <version>2.2.0</version>
+      <version>2.6.0</version>
     </dependency>
     <dependency>
       <groupId>androidx.media3</groupId>
       <artifactId>media3-exoplayer</artifactId>
-      <version>1.0.2</version>
+      <version>1.3.0</version>
     </dependency>
     <dependency>
       <groupId>androidx.media3</groupId>
       <artifactId>media3-exoplayer-dash</artifactId>
-      <version>1.0.2</version>
+      <version>1.3.0</version>
     </dependency>
     <dependency>
       <groupId>androidx.media3</groupId>
       <artifactId>media3-ui</artifactId>
-      <version>1.0.2</version>
+      <version>1.3.0</version>
     </dependency>
     <dependency>
       <groupId>ch.acra</groupId>
@@ -109,12 +109,12 @@
     <dependency>
       <groupId>androidx.databinding</groupId>
       <artifactId>viewbinding</artifactId>
-      <version>7.4.1</version>
+      <version>8.2.2</version>
     </dependency>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
-      <artifactId>kotlin-stdlib-jdk8</artifactId>
-      <version>1.6.21</version>
+      <artifactId>kotlin-stdlib</artifactId>
+      <version>1.9.23</version>
     </dependency>
   </dependencies>
 </project>
