--- a/advertising-demo-app/build.gradle
+++ b/advertising-demo-app/build.gradle
@@ -1,39 +1,6 @@
-/*
- * Copyright © Gusev Andrew, Emelianov Andrew, Spinov Dmitry [collectively referred as the Authors], 2017 - All Rights Reserved
- * [NOTICE: All information contained herein is, and remains the property of the Authors.](notice: All information contained herein is, and remains the property of the Authors.)
- * The intellectual and technical concepts contained herein are proprietary to the Authors
- * and may be covered by any existing patents of any country in the world, patents in
- * process, and are protected by trade secret or copyright law.
- *
- * Dissemination of this information or reproduction of this material is strictly forbidden unless prior
- * written permission is obtained from the Authors. Access to the source code contained herein is hereby forbidden
- * to anyone except persons (natural person, corporate or unincorporated body, whether or not having a separate
- * legal personality, and that person’s personal representatives, and successors)
- * the Authors have granted permission and who have executed Confidentiality and Non-disclosure agreements
- * explicitly covering such access.
- *
- * The copyright notice above does not provide evidence of any actual or intended publication or disclosure
- * of this source code, which in
- */
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-buildscript {
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:8.2.2'
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.23'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
-}
 plugins {
-    // ...
-    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
+    alias(libs.plugins.android.application) apply false
+    alias(libs.plugins.kotlin.android) apply false
+    alias(libs.plugins.kotlin.compose) apply false
 }
