--- a/advertising-demo-app/app/build.gradle
+++ b/advertising-demo-app/app/build.gradle
@@ -1,38 +1,28 @@
-/*
- * Copyright © Gusev Andrew, Emelianov Andrew, Spinov Dmitry [collectively referred as the Authors], 2017 - All Rights Reserved
- * [NOTICE: All information contained herein is, and remains the property of the Authors.](notice: All information contained herein is, and remains the property of the Authors.)
- * The intellectual and technical concepts contained herein are proprietary to the Authors
- * and may be covered by any existing patents of any country in the world, patents in
- * process, and are protected by trade secret or copyright law.
- *
- * Dissemination of this information or reproduction of this material is strictly forbidden unless prior
- * written permission is obtained from the Authors. Access to the source code contained herein is hereby forbidden
- * to anyone except persons (natural person, corporate or unincorporated body, whether or not having a separate
- * legal personality, and that person’s personal representatives, and successors)
- * the Authors have granted permission and who have executed Confidentiality and Non-disclosure agreements
- * explicitly covering such access.
- *
- * The copyright notice above does not provide evidence of any actual or intended publication or disclosure
- * of this source code, which in
- */
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-parcelize'
 }
-apply plugin: 'kotlin-android'
 
 android {
-    compileSdk 34
+    namespace 'tech.solutionarchitects.testapplication'
+    compileSdkVersion 36
 
     defaultConfig {
+        minSdkVersion 24
+        targetSdkVersion 36
+
         applicationId "tech.solution.testapplication"
-        minSdk 21
-        targetSdk 34
-        versionCode 11 // eg: 0.99 = 99, 1.0 = 100, 1.54 = 154, 23.08 = 2308
-        versionName "0.11"
+        versionCode 1
+        versionName "0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    buildFeatures {
+        buildConfig = true
+        viewBinding = true
     }
 
     buildTypes {
@@ -46,25 +36,24 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
+
+    kotlin {
+        compilerOptions {
+            jvmTarget.set(JvmTarget.JVM_1_8)
+        }
     }
-    buildFeatures {
-        viewBinding true
-    }
-    namespace 'tech.solutionarchitects.testapplication'
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.preference:preference-ktx:1.2.1'
+
+    implementation 'com.google.android.material:material:1.11.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
-    implementation 'com.github.solutionarchitectstech:mobile_sdk_release:1.0.2'
-    implementation 'androidx.preference:preference-ktx:1.2.1'
+    implementation 'com.github.solutionarchitectstech:mobile_sdk_release:1.1.0'
 
 }
